# minecrafter-discord

./: .replit  README.md  bot.py  keep_alive.py  newBot.py  pyproject.toml  requirements.txt
cogs/: embeds.py  playerdata.py  render.py  servers.py  shared.py  utility.py
pages/: index.html
