[tool]
[tool.poetry]
name = "Minecrafter"
version = "1.0"
description = "A Discord Bot that fetches Minecraft skins"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.6"
discord-py-slash-command = "^2.2"
aiohttp = "^3.6.0"
async-timeout = "^3.0.1"
requests = "^2.25.1"
datetime = "^4.3"
flask = "^2.0.1"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"